@@ -235,8 +235,7 @@ module ActiveMerchant #:nodoc:
           :test => test?,
           :authorization => @response[:ordernum],
           :avs_result => { :code => @response[:avs].to_s[2,1] },
-          :cvv_result => @response[:avs].to_s[3,1],
-          :card_number => creditcard && parameters[:creditcard][:cardnumber]
+          :cvv_result => @response[:avs].to_s[3,1]
         )
       end
       
