@@ -197,15 +197,8 @@ module ActiveMerchant #:nodoc:
     	    :test => test?,
     	    :authorization => @response[:pn_ref] || @response[:rp_ref],
     	    :cvv_result => CVV_CODE[@response[:cv_result]],
-    	    :avs_result => { :code => @response[:avs_result] },
-    	    :card_number => parse_credit_card_number(request)
+    	    :avs_result => { :code => @response[:avs_result] }
         )
-      end
-      
-      def parse_credit_card_number(request)
-        xml = REXML::Document.new(request)
-        card_number = REXML::XPath.first(xml, '//Tender/Card/CardNum')
-        card_number && card_number.text
       end
     end
   end
