@@ -5,7 +5,7 @@ module ActiveMerchant #:nodoc:
     end
   
     class Response
-      attr_reader :params, :message, :test, :authorization, :avs_result, :cvv_result, :card_data
+      attr_reader :params, :message, :test, :authorization, :avs_result, :cvv_result
       
       def success?
         @success
@@ -26,15 +26,6 @@ module ActiveMerchant #:nodoc:
         @fraud_review = options[:fraud_review]
         @avs_result = AVSResult.new(options[:avs_result]).to_hash
         @cvv_result = CVVResult.new(options[:cvv_result]).to_hash
-        @card_data = format_card_data(options[:card_number])
-      end
-      
-      private
-      def format_card_data(number)
-        {
-          'type' => CreditCard.type?(number),
-          'number' => CreditCard.last_digits(number)
-        }
       end
     end
   end
