@@ -107,14 +107,7 @@ class BrainTreeTest < Test::Unit::TestCase
     response = @gateway.purchase(@amount, @credit_card)
     assert_equal 'N', response.cvv_result['code']
   end
-  
-  def test_card_data
-    @gateway.expects(:ssl_post).returns(successful_purchase_response)
-    
-    response = @gateway.purchase(@amount, @credit_card)
-    assert_equal CreditCard.last_digits(@credit_card.number), response.card_data['number']
-  end
-  
+
   private
   def successful_purchase_response
     'response=1&responsetext=SUCCESS&authcode=123456&transactionid=510695343&avsresponse=N&cvvresponse=N&orderid=ea1e0d50dcc8cfc6e4b55650c592097e&type=sale&response_code=100'
