@@ -58,13 +58,6 @@ class TrustCommerceTest < Test::Unit::TestCase
     assert_equal 'P', response.cvv_result['code']
   end
   
-  def test_card_data
-    @gateway.expects(:ssl_post).returns(successful_purchase_response)
-    
-    response = @gateway.purchase(@amount, @credit_card)
-    assert_equal CreditCard.last_digits(@credit_card.number), response.card_data['number']
-  end
-  
   def test_supported_countries
     assert_equal ['US'], TrustCommerceGateway.supported_countries
   end
